--- a/roles/identify_and_backup_content/tasks/apache2.yaml
+++ b/roles/identify_and_backup_content/tasks/apache2.yaml
@@ -17,48 +17,48 @@
     msg: "Apache2 configuration directory is: {{ apache2_config_file_path }}"
 ######################
 
-- name: Find all files in {{ apache2_root_path }}/sites-available/ directory
-  find:
-    paths: "{{ apache2_root_path }}/sites-available"
-    recurse: yes
-    file_type: file
-  register: apache2_sitesavailable_files
+# - name: Find all files in {{ apache2_root_path }}/sites-available/ directory
+#   find:
+#     paths: "{{ apache2_root_path }}/sites-available"
+#     recurse: yes
+#     file_type: file
+#   register: apache2_sitesavailable_files
 
-- name: Find all files in {{ apache2_root_path }}/sites-enabled/ directory
-  find:
-    paths: "{{ apache2_root_path }}/sites-enabled"
-    recurse: yes
-    file_type: file
-  register: apache2_sitesenabled_files
+# - name: Find all files in {{ apache2_root_path }}/sites-enabled/ directory
+#   find:
+#     paths: "{{ apache2_root_path }}/sites-enabled"
+#     recurse: yes
+#     file_type: file
+#   register: apache2_sitesenabled_files
 
-- name: Combine files from both directories
-  set_fact:
-    apache2_sites_files: "{{ apache2_sitesenabled_files.files + apache2_sitesavailable_files.files }}"
+# - name: Combine files from both directories
+#   set_fact:
+#     apache2_sites_files: "{{ apache2_sitesenabled_files.files + apache2_sitesavailable_files.files }}"
 
-- name: Extract the paths of all files
-  set_fact:
-    apache2_sites_files_paths: "{{ apache2_sites_files | map(attribute='path') | list }}"
+# - name: Extract the paths of all files
+#   set_fact:
+#     apache2_sites_files_paths: "{{ apache2_sites_files | map(attribute='path') | list }}"
 
-- name: Display all file paths
-  debug:
-    var: apache2_sites_files_paths
+# - name: Display all file paths
+#   debug:
+#     var: apache2_sites_files_paths
 
-- name: Read content of each SSL configuration file
-  slurp:
-    path: "{{ item }}"
-  loop: "{{ apache2_sites_files_paths }}"
-  register: file_contents
+# - name: Read content of each SSL configuration file
+#   slurp:
+#     path: "{{ item }}"
+#   loop: "{{ apache2_sites_files_paths }}"
+#   register: file_contents
 
-- name: Search SSL certificate and key paths in each file
-  debug:
-    msg: "{{ item.item }}: {{ item.content | b64decode | regex_findall('^\\\\s*(SSLCertificateFile|SSLCertificateKeyFile)\\\\s+([^\\s#]+)') }}"
-  loop: "{{ file_contents.results }}"
-  when: item.content is defined
+# - name: Search SSL certificate and key paths in each file
+#   debug:
+#     msg: "{{ item.item }}: {{ item.content | b64decode | regex_findall('^\\\\s*(SSLCertificateFile|SSLCertificateKeyFile)\\\\s+([^\\s#]+)') }}"
+#   loop: "{{ file_contents.results }}"
+#   when: item.content is defined
 
-- name: Display unique SSLCertificateFile paths
-  debug:
-    msg: "{{ item | unique }}"
-  loop: "{{ file_contents.results | map(attribute='content') | map('b64decode') | map('regex_findall', '^\\\\s*(SSLCertificateFile|SSLCertificateKeyFile)\\\\s+([^\\s#]+)') | flatten }}"##
+# - name: Display unique SSLCertificateFile paths
+#   debug:
+#     msg: "{{ item | unique }}"
+#   loop: "{{ file_contents.results | map(attribute='content') | map('b64decode') | map('regex_findall', '^\\\\s*(SSLCertificateFile|SSLCertificateKeyFile)\\\\s+([^\\s#]+)') | flatten }}"##
 
 - name: Search for DocumentRoot directive in Apache2 config files
   command: grep -r "DocumentRoot" {{ apache2_root_path }}/sites-available/
