--- a/roles/identify_and_backup_content/tasks/apache2.yaml
+++ b/roles/identify_and_backup_content/tasks/apache2.yaml
@@ -39,7 +39,7 @@
 
 - name: Extract and filter unique SSLCertificateFile paths
   set_fact:
-    apache2_sslcertificatefile_path: "{{ apache2_sslcrtificatefile_otput.stdout_lines | select('search', '^(?!\\s*#).*SSLCertificateFile') | map('regex_replace', '.*SSLCertificateFile\\s+(.*)', '\\1') | unique | list | default('') }}"
+    apache2_sslcertificatefile_path: "{{ apache2_sslcrtificatefile_otput.stdout_lines | select('search', 'SSLCertificateFile') | map('regex_replace', '.*SSLCertificateFile\\s+(.*)', '\\1') | unique | list }}"
 
 - name: Display unique SSLCertificateFile paths
   debug:
@@ -53,7 +53,7 @@
 
 - name: Extract and filter unique SSLCertificateKeyFile paths
   set_fact: 
-    apache2_sslcertificatekeyfile_path: "{{ apache2_sslcrtificatefile_otput.stdout_lines | select('search', '^(?!\\s*#).*SSLCertificateKeyFile') | map('regex_replace', '.*SSLCertificateKeyFile\\s+(.*)', '\\1') | unique | list | default('') }}"
+    apache2_sslcertificatekeyfile_path:  "{{ apache2_sslcertificatekeyfile_otput.stdout_lines | select('search', 'SSLCertificateKeyFile') | map('regex_replace', '.*SSLCertificateKeyFile\\s+(.*)', '\\1') | unique | list }}"
 
 - name: Display unique SSLCertificateKeyFile paths
   debug:
