--- a/roles/identify_and_backup_content/tasks/apache2.yaml
+++ b/roles/identify_and_backup_content/tasks/apache2.yaml
@@ -59,9 +59,14 @@
   debug:
     msg: "{{ apache2_sslcertificatekeyfile_path }}"
 
-- name: Set unique apache2 SSL files path
+# - name: Set unique apache2 SSL files path
+#   set_fact:
+#     apache2_ssl_certs_path: "{{ apache2_sslcertificatekeyfile_path + apache2_sslcertificatefile_path | list | unique }}"
+
+- name: Filter list
   set_fact:
-    apache2_ssl_certs_path: "{{ apache2_sslcertificatekeyfile_path + apache2_sslcertificatefile_path | list | unique }}"
+    apache2_ssl_certs_path: "{{ apache2_sslcertificatekeyfile_path + apache2_sslcertificatefile_path  | select('regex_search', '^/[^#\s\t]*$') | list | unique }}"
+
 
 # Backup
 
