--- a/roles/identify_and_backup_content/tasks/apache2.yaml
+++ b/roles/identify_and_backup_content/tasks/apache2.yaml
@@ -41,10 +41,6 @@
   set_fact:
     apache2_sslcertificatefile_path: "{{ apache2_sslcrtificatefile_otput.stdout_lines | select('search', 'SSLCertificateFile') | map('regex_replace', '.*SSLCertificateFile\\s+(.*)', '\\1') | unique | list }}"
 
-- name: Display unique SSLCertificateFile paths
-  debug:
-    msg: "{{ apache2_sslcertificatefile_path }}"
-
 # SSLCertificateKeyFile
 - name: Search for SSLCertificateKeyFile directive in Apache2 config files
   command: grep -r "SSLCertificateKeyFile " {{ apache2_root_path }}/sites-available/ {{ apache2_root_path }}/sites-enabled/
@@ -55,10 +51,6 @@
   set_fact: 
     apache2_sslcertificatekeyfile_path:  "{{ apache2_sslcertificatekeyfile_otput.stdout_lines | select('search', 'SSLCertificateKeyFile') | map('regex_replace', '.*SSLCertificateKeyFile\\s+(.*)', '\\1') | unique | list }}"
 
-- name: Display unique SSLCertificateKeyFile paths
-  debug:
-    msg: "{{ apache2_sslcertificatekeyfile_path }}"
-
 - name: Set unique apache2 SSL files path
   set_fact:
     apache2_ssl_certs_path_combined: "{{ apache2_sslcertificatekeyfile_path + apache2_sslcertificatefile_path | list | unique }}"
@@ -67,7 +59,9 @@
   set_fact:
       apache2_ssl_certs_path: '{{ apache2_ssl_certs_path_combined | select("match", "^/[^# \t]*$") | list | unique }}'
 
-
+- name: Display unique SSLCertificateFile paths
+  debug:
+    msg: "{{ apache2_ssl_certs_path }}"
 
 # Backup
 
