--- a/roles/identify_web_service/tasks/ubuntu.yaml
+++ b/roles/identify_web_service/tasks/ubuntu.yaml
@@ -1,36 +1,73 @@
-- name: Check if Apache (httpd) is installed
-  shell: dpkg -l | grep -E 'apache2|httpd'
-  register: apache_check
-  ignore_errors: yes
+# - name: Check if Apache2 (httpd) is installed
+#   shell: dpkg -l | grep -E 'apache2|httpd'
+#   register: apache_check
+#   ignore_errors: yes
+
+# - name: Set web service name to Apache
+#   set_fact:
+#     web_service_name: "apache2"
+#   when: apache_check.rc == 0
+
+- name: Check if Apache2 is installed
+  ansible.builtin.package_facts:
+  register: apache2_installed
+
+- name: Check if Apache2 is running
+  ansible.builtin.systemd:
+    name: apache2
+    state: started
+  when: apache2_installed.packages['apache2'] is defined
+  register: apache2_running
 
 - name: Set web service name to Apache
   set_fact:
     web_service_name: "apache2"
-  when: apache_check.rc == 0
+  when: apache2_running.state == "started" and apache2_running is defined
+
 
 - name: Check if Nginx is installed
-  shell: dpkg -l | grep nginx
-  register: nginx_check
-  ignore_errors: yes
+  ansible.builtin.package_facts:
+  register: nginx_installed
+
+- name: Check if Nginx is running
+  ansible.builtin.systemd:
+    name: nginx
+    state: started
+  when: nginx_installed.packages['nginx'] is defined
+  register: nginx_running
+
 
 - name: Set web service name to Nginx
   set_fact:
     web_service_name: "nginx"
-  when: nginx_check.rc == 0
+  when: nginx_running.state == "started" and nginx_running is defined
 
-- name: Check if Lighttpd is installed
-  shell: dpkg -l | grep lighttpd
-  register: lighttpd_check
-  ignore_errors: yes
 
-- name: Set web service name to Lighttpd
-  set_fact:
-    web_service_name: "lighttpd"
-  when: lighttpd_check.rc == 0
 
-- name: Display the detected web service binary name
-  debug:
-    msg: "Detected web service binary name: {{ web_service_name }}"
+
+# - name: Check if Nginx is installed
+#   shell: dpkg -l | grep nginx
+#   register: nginx_check
+#   ignore_errors: yes
+
+# - name: Set web service name to Nginx
+#   set_fact:
+#     web_service_name: "nginx"
+#   when: nginx_check.rc == 0
+
+# - name: Check if Lighttpd is installed
+#   shell: dpkg -l | grep lighttpd
+#   register: lighttpd_check
+#   ignore_errors: yes
+
+# - name: Set web service name to Lighttpd
+#   set_fact:
+#     web_service_name: "lighttpd"
+#   when: lighttpd_check.rc == 0
+
+# - name: Display the detected web service binary name
+#   debug:
+#     msg: "Detected web service binary name: {{ web_service_name }}"
 
 - name: Fail playbook if no web service detected
   debug:
