--- a/roles/identify_web_service/tasks/ubuntu.yaml
+++ b/roles/identify_web_service/tasks/ubuntu.yaml
@@ -47,10 +47,10 @@
     web_service_name: "nginx"
   when: nginx_started is defined and nginx_started
 
-- name: Fail playbook if no web service detected
+- name: Print web service name
   debug:
     msg: "Web service {{ web_service_name }} is running"
-  when: web_service_name not defined
+  when: web_service_name is defined
 
 
 
