--- a/roles/identify_and_backup_content/tasks/main.yaml
+++ b/roles/identify_and_backup_content/tasks/main.yaml
@@ -1,3 +1,7 @@
 - name: Include tasks for apache2 webservice
   include_tasks: apache2.yaml
   when: web_service_name == "apache2"
+
+- name: Include tasks for nginx webservice
+  include_tasks: nginx.yaml
+  when: web_service_name == "nginx"
