--- a/roles/identify_and_backup_content/tasks/nginx.yaml
+++ b/roles/identify_and_backup_content/tasks/nginx.yaml
@@ -6,7 +6,7 @@
 
 - name: Extract nginx configuration root path
   set_fact:
-    nginx_root_path: "{{ nginx_config_file.stdout | regex_search('--conf-path=([^\s]+)', '\\1') | first }}"
+    nginx_root_path: "{{ nginx_config_file.stdout | regex_search('--conf-path=([^\\s]+)', '\\1') | first }}"
 
 # - name: Extract nginx configuration file path
 #   set_fact:
