--- a/roles/identify_and_backup_content/tasks/nginx.yaml
+++ b/roles/identify_and_backup_content/tasks/nginx.yaml
@@ -4,6 +4,10 @@
   failed_when: nginx_config_file.rc != 0
   changed_when: false
 
+- name: debug
+  debug:
+    msg: "{{ nginx_config_file}}"
+
 - name: Extract nginx configuration root path
   set_fact:
     nginx_root_path: "{{ nginx_config_file.stdout | regex_search('--conf-path=(.*)', '\\1') | first }}"
