--- a/roles/identify_and_backup_content/tasks/nginx.yaml
+++ b/roles/identify_and_backup_content/tasks/nginx.yaml
@@ -10,7 +10,7 @@
 
 - name: Extract nginx configuration root path
   set_fact:
-    nginx_root_path: "{{ nginx_config_file.stderr | regex_search('--conf-path=(.*)', '\\1') | first | split(' ') | first }}"
+    nginx_root_path: "{{ nginx_config_file.stderr | regex_search('--conf-path=(.*)', '\\1') }}"
     nginx_config_file_path: "{{ nginx_root_path | regex_replace('/[^/]+$', '') }}"
 
 # - name: Extract nginx configuration file path
