--- a/roles/identify_and_backup_content/tasks/nginx.yaml
+++ b/roles/identify_and_backup_content/tasks/nginx.yaml
@@ -19,4 +19,4 @@
 
 - name: Display nginx configuration directory
   debug:
-    msg: "nginx configuration directory is: {{ nginx_root_path }}, {{ nginx_config_file_path }}"
+    msg: "nginx configuration directory is: {{ nginx_root_path }}"
