--- a/roles/identify_and_backup_content/tasks/nginx.yaml
+++ b/roles/identify_and_backup_content/tasks/nginx.yaml
@@ -1,23 +1,67 @@
-- name: Get nginx configuration file path
-  ansible.builtin.shell: nginx -V
-  register: nginx_config_file
-  failed_when: nginx_config_file.rc != 0
-  changed_when: false
+- name: Set nginx variables
+    nginx_root_path: /etc/nginx
+    nginx_config_file_path: /etc/nginx/nginx.conf
+    nginx_document_roots: ""
+    nginx_sslcertificatefile_path: ""
+    nginx_sslcertificatekeyfile_path: ""
+    nginx_ssl_certs_path_combined: ""
+    nginx_ssl_certs_path: ""
 
-- name: debug
-  debug:
-    msg: "{{ nginx_config_file}}"
+# DocumentRoot in nginx
+- name: Search for root directive in nginx config files
+  command: grep -r "root" {{ nginx_root_path }}/sites-available/ {{ nginx_root_path }}/sites-enabled/ {{ nginx_config_file_path }}
+  register: nginx_documentroot_otput
+  failed_when: false
 
-- name: Extract nginx configuration root path
+- name: Extract and filter unique DocumentRoot paths
   set_fact:
-    nginx_root_path_tmp: "{{ nginx_config_file.stderr | regex_search('--conf-path=(.*)', '\\1') | first }}"
-    nginx_root_path: "{{ nginx_root_path_tmp.split(' ')[0] }}"
-    #nginx_config_file_path: "{{ nginx_root_path | regex_replace('/[^/]+$', '') }}"
+    nginx_document_roots: "{{ nginx_documentroot_otput.stdout_lines | select('search', 'root') | map('regex_replace', '.*root\\s+(.*)', '\\1') | unique | list }}"
 
-# - name: Extract nginx configuration file path
-#   set_fact:
-#     nginx_config_file_path: "{{ nginx_root_path }}/{{ nginx_config_file.stdout | regex_search('SERVER_CONFIG_FILE=\"([^\"]+)\"', '\\1') | first }}"
-
-- name: Display nginx configuration directory
+- name: Display unique DocumentRoot paths
   debug:
-    msg: "nginx configuration directory is: {{ nginx_root_path }}"
+    msg: "{{ nginx_document_roots }}"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# - name: Get nginx configuration file path
+#   ansible.builtin.shell: nginx -V
+#   register: nginx_config_file
+#   failed_when: nginx_config_file.rc != 0
+#   changed_when: false
+
+# - name: debug
+#   debug:
+#     msg: "{{ nginx_config_file}}"
+
+# - name: Extract nginx configuration root path
+#   set_fact:
+#     nginx_root_path_tmp: "{{ nginx_config_file.stderr | regex_search('--conf-path=(.*)', '\\1') | first }}"
+#     nginx_root_path: "{{ nginx_root_path_tmp.split(' ')[0] }}"
+#     #nginx_config_file_path: "{{ nginx_root_path | regex_replace('/[^/]+$', '') }}"
+
+# # - name: Extract nginx configuration file path
+# #   set_fact:
+# #     nginx_config_file_path: "{{ nginx_root_path }}/{{ nginx_config_file.stdout | regex_search('SERVER_CONFIG_FILE=\"([^\"]+)\"', '\\1') | first }}"
+
+# - name: Display nginx configuration directory
+#   debug:
+#     msg: "nginx configuration directory is: {{ nginx_root_path }}"
