--- a/roles/identify_and_backup_content/tasks/nginx.yaml
+++ b/roles/identify_and_backup_content/tasks/nginx.yaml
@@ -1,4 +1,5 @@
 - name: Set nginx variables
+  set_fact:
     nginx_root_path: /etc/nginx
     nginx_config_file_path: /etc/nginx/nginx.conf
     nginx_document_roots: ""
