--- a/roles/identify_and_backup_content/tasks/nginx.yaml
+++ b/roles/identify_and_backup_content/tasks/nginx.yaml
@@ -2,11 +2,6 @@
   set_fact:
     nginx_root_path: /etc/nginx
     nginx_config_file_path: /etc/nginx/nginx.conf
-    nginx_document_roots: ""
-    nginx_sslcertificatefile_path: ""
-    nginx_sslcertificatekeyfile_path: ""
-    nginx_ssl_certs_path_combined: ""
-    nginx_ssl_certs_path: ""
 
 # DocumentRoot in nginx
 - name: Search for root directive in nginx config files
@@ -64,6 +59,55 @@
   debug:
     msg: "{{ nginx_ssl_certs_path }}"
 
+
+# Backup
+
+- name: Create directory for nginx backup in {{ rootless_user }} home directory
+  file:
+    path: /home/{{ rootless_user }}/nginx
+    state: directory
+    owner: "{{ rootless_user }}"
+    group: "{{ rootless_user }}"
+    mode: '0755'
+
+- name: Backup nginx config recursively while preserving file permissions
+  ansible.builtin.copy:
+    src: "{{ nginx_root_path }}/"
+    dest: /home/{{ rootless_user }}/nginx{{ nginx_root_path }}
+    mode: preserve
+    force: true
+
+- name: Backup nginx content recursively while preserving file permissions
+  ansible.builtin.copy:
+    src: "{{ item }}/"
+    dest: /home/{{ rootless_user }}/nginx{{ item }}
+    mode: preserve
+    force: true
+  loop: "{{ nginx_document_roots }}"
+ 
+- name: Create the target directories dynamically
+  ansible.builtin.file:
+    path: "/home/{{ rootless_user }}/nginx/{{ item | regex_replace('^/+', '') | regex_replace('/[^/]+$', '') }}"
+    state: directory
+    mode: '0755'
+  loop: "{{ nginx_ssl_certs_path }}"
+  ignore_errors: true
+
+- name: Backup nginx certificates recursively while preserving file permissions
+  ansible.builtin.copy:
+    src: "{{ item }}/"
+    dest: /home/{{ rootless_user }}/nginx{{ item }}
+    mode: preserve
+    force: true
+  loop: "{{ nginx_ssl_certs_path }}"
+  ignore_errors: true
+
+- name: Change owner of /home/{{ rootless_user }}/nginx recursivelly
+  ansible.builtin.file:
+    path: /home/{{ rootless_user }}/nginx
+    owner: "{{ rootless_user }}"
+    group: "{{ rootless_user }}"
+    recurse: yes
 
 
 
