--- a/move_webserver_to_container.yaml
+++ b/move_webserver_to_container.yaml
@@ -11,7 +11,7 @@
     - name: identify_web_service
     - name: prepare_container_environment
     - name: identify_and_backup_content
-    # - name: identify_web_ports
+    - name: identify_web_ports
     # - name: identify_enabled_modules
     # - name: run_container
     #   vars:
