--- a/roles/identify_and_backup_content/tasks/nginx.yaml
+++ b/roles/identify_and_backup_content/tasks/nginx.yaml
@@ -86,7 +86,7 @@
 
 - name: Backup nginx content recursively while preserving file permissions
   ansible.builtin.copy:
-    src: "{{ item }}/"
+    src: "{{ item }}"
     dest: /home/{{ rootless_user }}/nginx{{ item }}
     mode: preserve
     force: true
@@ -104,7 +104,7 @@
 
 - name: Backup nginx certificates recursively while preserving file permissions
   ansible.builtin.copy:
-    src: "{{ item }}/"
+    src: "{{ item }}"
     dest: /home/{{ rootless_user }}/nginx{{ item }}
     mode: preserve
     force: true
