--- a/roles/identify_web_ports/tasks/nginx.yaml
+++ b/roles/identify_web_ports/tasks/nginx.yaml
@@ -9,7 +9,7 @@
 
 - name: Remove comments lines
   set_fact:
-    nginx_ports: "{{ nginx_ports | selectattr('0', 'search', '^#', invert=True) | list }}"
+    nginx_ports: "{{ nginx_ports | rejectattr('0', 'search', '^#') | list }}"
 
 - name: Display nginx ports
   debug:
