--- a/roles/identify_web_ports/tasks/nginx.yaml
+++ b/roles/identify_web_ports/tasks/nginx.yaml
@@ -11,6 +11,10 @@
   set_fact:
     nginx_ports: "{{ nginx_ports | rejectattr('0', 'search', '^#') | list }}"
 
+- name: Get unique ports numbers
+  set_fact:
+    nginx_ports: "{{ nginx_ports | map('regex_replace', '\\d+', '') | list | unique }}"
+
 - name: Display nginx ports
   debug:
     msg: "nginx is listening on ports: {{ nginx_ports }}"
