--- a/roles/identify_web_ports/tasks/nginx.yaml
+++ b/roles/identify_web_ports/tasks/nginx.yaml
@@ -3,9 +3,14 @@
   register: nginx_listen_ports
   changed_when: false
 
+# - name: Extract nginx ports (clean up extra spaces/tabs)
+#   set_fact:
+#     nginx_ports: "{{ nginx_listen_ports.stdout_lines | map('regex_replace', '^\\s*listen\\s*', '') | map('trim') | rejectattr('0', 'search', '^#') | map('regex_findall', '\\d+') | unique }}"
+
 - name: Extract nginx ports (clean up extra spaces/tabs)
   set_fact:
-    nginx_ports: "{{ nginx_listen_ports.stdout_lines | map('regex_replace', '^\\s*listen\\s*', '') | map('trim') | rejectattr('0', 'search', '^#') | map('regex_findall', '\\d+') | unique }}"
+    nginx_ports: "{{ nginx_listen_ports.stdout_lines | map('regex_replace', '^\\s*listen\\s*', '') | map('trim') | rejectattr('0', 'search', '^#') | map('regex_findall', '\\d+') | flatten | unique }}"
+
 
 # - name: Remove comments lines
 #   set_fact:
